src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_PrimaryL1__c</fullName>
        <formula>AND(
ISPICKVAL(Apttus_Config2__LineType__c,&quot;Product/Service&quot;),
OR(
AND(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Sales&quot;),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
OR(
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;),
CONTAINS(TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c), &quot;XD&quot;)
)
),
AND(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Trial&quot;),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
OR(
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
CONTAINS(TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c), &quot;XD&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA23&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB23&quot;)
)
),
AND(
OR(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Rent&quot;),
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;RentBuy&quot;),
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Free on Loan&quot;),
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Consumption&quot;)
),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Rental Fee&quot;),
OR(
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD01&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD09&quot;)
)
),
AND(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Subscription&quot;),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
OR(
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA01&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB01&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB02&quot;)
)
),
AND(
OR(
AND(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Sales&quot;),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;)
),
AND(
OR(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Free On Loan&quot;),
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Rent&quot;),
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;RentBuy&quot;)
),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Rental Fee&quot;)
)
),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD09&quot;)
),
AND(
ISPICKVAL(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c,&quot;Consumption&quot;),
ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Usage Fee&quot;),
ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD12&quot;)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS_PrimaryL1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ProductExtId__c</fullName>
        <label>Product External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>IF( Apttus_Config2__PriceListItemId__c  &lt;&gt; NULL, 
   IF(Apttus_Config2__PriceListItemId__r.APTS_Product_Code__c &lt;&gt; NULL, 
   Apttus_Config2__PriceListItemId__r.APTS_Product_Code__c, 
   Apttus_Config2__PriceListItemId__r.Apttus_Config2__ProductCode__c), 
Apttus_Config2__ProductId__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Material_Type__c</fullName>
        <formula>if( Apttus_Config2__OptionId__c != null,  Apttus_Config2__OptionId__r.APTS_Material_Type__c , Apttus_Config2__ProductId__r.APTS_Material_Type__c )</formula>
        <label>Product Material Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Installation_Date__c</fullName>
        <label>Requested Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number2__c</fullName>
        <label>Serial Number for Swap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(APTS_Serial_Number2__c)), APTS_Serial_Number2__c, Apttus_Config2__AssetLineItemId__r.APTS_Serial_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship to Party</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Line Items (Ship to Party)</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sold_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold to Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Sold to Party)</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Line_Number__c</fullName>
        <description>This field denotes the unique identifier for each line item in cart, generated in EPI</description>
        <label>Source Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage__c</fullName>
        <formula>Apttus_Config2__PriceListItemId__r.APTS_Spare_Parts_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spare Parts Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_part_coverage1__c</fullName>
        <label>Spare part coverage1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date_New_UX__c</fullName>
        <label>Start Date New UX</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Stop_RtR_Transactions_from__c</fullName>
        <defaultValue>TODAY()+10000</defaultValue>
        <description>Threshold Date field to stop RTR Transaction creation</description>
        <label>Stop RtR Transactions from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Category value from Classification Hierarchy</description>
        <label>Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Line Items (Sub Category)</relationshipLabel>
        <relationshipName>Sub_Category_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Sub Category value from Classification Hierarchy</description>
        <label>Sub Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Line Items (Sub Sub Category)</relationshipLabel>
        <relationshipName>Sub_Sub_Category_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_TAXO__c</fullName>
        <description>Sum of TAXes out of SAP</description>
        <label>Tax O</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Total__c</fullName>
        <label>Tax Total</label>
        <summarizedField>Apttus_Config2__TaxBreakup__c.Apttus_Config2__TaxAmount__c</summarizedField>
        <summaryForeignKey>Apttus_Config2__TaxBreakup__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Terminated_Asset_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terminated Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Line Items (Terminated Asset Line Item)</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Contract__c</fullName>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_UOM_defaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the selling UOM of the record was defaulted from PLI and also avoid the value to be changed everytime the cart is re-priced</description>
        <label>UOM defaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Unlimited_Machine_Ordering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlimited Machine Ordering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_VATO__c</fullName>
        <description>VAT amount calculated in SAP</description>
        <label>VAT O</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_VAT_classifier_0__c</fullName>
        <label>VAT classifier 0</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_VAT_classifier_1__c</fullName>
        <label>VAT classifier 1</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_VAT_classifier_2__c</fullName>
        <label>VAT classifier 2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Water_Filter_Replacement__c</fullName>
        <formula>TEXT(Apttus_Config2__OptionId__r.Water_Filter_Replacement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Water Filter Replacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_XAuthor_To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XAuthor To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_YOCI_Available_CI__c</fullName>
        <formula>IF(AND(APTS_YOCI_Available__c &gt;= 1,  
OR(APTS_Hierarchy_First_Level__c = &apos;Coffee&apos;,APTS_Hierarchy_First_Level__c = &apos;Tea&apos;,APTS_Hierarchy_First_Level__c=&apos;&amp;More&apos;)),true,false)</formula>
        <label>YOCI Available CI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_YOCI_Available__c</fullName>
        <description>For CER/Contracted Products  page</description>
        <label>YOCI Available</label>
        <summaryFilterItems>
            <field>Apttus_Config2__AdjustmentLineItem__c.Apttus_Config2__Type__c</field>
            <operation>equals</operation>
            <value>Consignment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus_Config2__AdjustmentLineItem__c.Apttus_Config2__AdjustmentAmount__c</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__AdjustmentLineItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_ZP01__c</fullName>
        <formula>IF(Apttus_Config2__BasePriceOverride__c &lt;&gt; 0,
     IF( Apttus_Config2__BasePrice__c  = 0 ,Apttus_Config2__ListPrice__c * Apttus_Config2__Quantity__c * 
     Apttus_Config2__SellingTerm__c,
     Apttus_Config2__BaseExtendedPrice__c )
,Apttus_Config2__BasePrice__c * Apttus_Config2__Quantity__c * Apttus_Config2__SellingTerm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZP01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_counter_readings_required__c</fullName>
        <formula>IF(AND(Apttus_Config2__ProductId__r.APTS_Full_Operating_product__c == TRUE, Apttus_Config2__OptionGroupLabel__c==&apos;PaymentSystem&apos;),TRUE, IF(AND(Apttus_Config2__OptionGroupLabel__c==&apos;Connected Coffee Services&apos;, CONTAINS( Apttus_Config2__OptionId__r.Name , &apos;report&apos;)),TRUE,FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>counter readings required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_is_BPO_defaulted_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is BPO defaulted Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_is_Indexation_skip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We would be skipping indexation for options where all line items are invoiced.</description>
        <inlineHelpText>We would be skipping indexation for options where all line items are invoiced.</inlineHelpText>
        <label>is Indexation skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_is_Tax_and_VAT_calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if tax is calculated for this line item</description>
        <inlineHelpText>checked if tax is calculated for this line item</inlineHelpText>
        <label>is Tax and VAT calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_is_selling_UOM_defaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is selling UOM defaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_numeric_summary_check__c</fullName>
        <description>to be deleted</description>
        <inlineHelpText>to be deleted</inlineHelpText>
        <label>numeric summary check</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_old_toc__c</fullName>
        <label>old toc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__Approval_Status__c</fullName>
        <description>The approval status of the cart line item</description>
        <inlineHelpText>The approval status of the cart line item</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Approval Triggered</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdHocGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the totaling group associated with the item</description>
        <label>Totaling Group</label>
        <referenceTo>Apttus_Config2__AdHocGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedByRuleInfo__c</fullName>
        <description>Information about the auto inclusion constraint rule action and line number that finally triggers the rule is stored here.</description>
        <label>Added By Rule Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedBy__c</fullName>
        <description>Indicates who added the product/service line item</description>
        <label>Added By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Default Rule</fullName>
                </value>
                <value>
                    <fullName>Constraint Rule</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The manual price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The manual price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>% Discount Off List</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllocateGroupAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether group adjustments should be allocated to the line item</description>
        <label>Allocate Group Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether manual price adjustments are allowed for the line item</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowProration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether proration is allowed for the line item</description>
        <label>Allow Proration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowRemoval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the user is allowed to remove the line item</description>
        <label>Allow Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowableAction__c</fullName>
        <description>The action allowed for the end user</description>
        <label>Allowable Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unrestricted</fullName>
                    <default>true</default>
                    <label>Unrestricted</label>
                </value>
                <value>
                    <fullName>Adjust Upwards</fullName>
                </value>
                <value>
                    <fullName>Adjust Downwards</fullName>
                </value>
                <value>
                    <fullName>No Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the line item</description>
        <inlineHelpText>ID of the asset associated with the line item</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item from which the line item is created.</description>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetQuantity__c</fullName>
        <description>The asset quantity</description>
        <inlineHelpText>The asset quantity</inlineHelpText>
        <label>Asset Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_Config2__ProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Base Price X Term (if applicable) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Bill To)</relationshipLabel>
        <relationshipName>LineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Bill on Ready for Billing Date</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>